sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:3: error: not found: value base
  while(!estBaseTriee(base)){
                      ^